[gd_scene load_steps=4 format=3 uid="uid://cvde2fc86wdev"]

[ext_resource type="Texture2D" uid="uid://0b00qici0n" path="res://assets/titlescreen.png" id="1_c2u1v"]
[ext_resource type="Script" uid="uid://bfnbval0ejfrl" path="res://options.gd" id="1_yjkok"]
[ext_resource type="FontFile" uid="uid://cufjgh3gelqqk" path="res://assets/old_london/OldLondon.ttf" id="3_2iy26"]

[node name="options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjkok")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(926, 551.5)
scale = Vector2(20.06, 17.4531)
texture = ExtResource("1_c2u1v")

[node name="back_button" type="Button" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 35.0
offset_right = 95.0
offset_bottom = 75.0
scale = Vector2(3, 3)
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 30
text = "back"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="story" type="Button" parent="Control"]
layout_mode = 0
offset_left = 819.0
offset_top = 554.0
offset_right = 893.0
offset_bottom = 588.0
scale = Vector2(3.8, 3.8)
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 32
text = "Story
"

[node name="credits" type="Button" parent="Control"]
layout_mode = 0
offset_left = 786.0
offset_top = 712.0
offset_right = 879.0
offset_bottom = 748.0
scale = Vector2(3.8, 3.8)
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 34
text = "Credits"

[node name="Control2" type="Control" parent="."]
anchors_preset = 0
offset_left = -28.0
offset_top = 47.0
offset_right = 12.0
offset_bottom = 87.0

[node name="music_label" type="Label" parent="Control2"]
layout_mode = 0
offset_left = 649.0
offset_top = 149.0
offset_right = 709.0
offset_bottom = 172.0
scale = Vector2(5, 5)
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 25
text = "Music:"

[node name="SFX_label" type="Label" parent="Control2"]
layout_mode = 0
offset_left = 672.0
offset_top = 277.0
offset_right = 724.0
offset_bottom = 300.0
scale = Vector2(5, 5)
theme_override_fonts/font = ExtResource("3_2iy26")
theme_override_font_sizes/font_size = 25
text = "SFX:"

[node name="music_toggle" type="CheckButton" parent="Control2"]
layout_mode = 0
offset_left = 975.0
offset_top = 172.0
offset_right = 1019.0
offset_bottom = 196.0
scale = Vector2(4.5, 4.5)
button_pressed = true

[node name="SFX_toggle" type="CheckButton" parent="Control2"]
layout_mode = 0
offset_left = 975.0
offset_top = 287.0
offset_right = 1019.0
offset_bottom = 311.0
scale = Vector2(4.5, 4.5)
button_pressed = true

[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Control/story" to="." method="_on_story_pressed"]
[connection signal="pressed" from="Control/credits" to="." method="_on_credits_pressed"]
